<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetEm</string>
    <string name="title_activity_maps">MeetEm</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Action Settings</string>
    <string name="map">Map</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="options">Options</string>
    <string name="meetem">Meetem</string>
    <string name="title_activity_friends_db">FriendsDB</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string-array name="price_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="rating_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
