<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:weightSum="10"
    android:background="@drawable/main_header_selector"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_weight="8"
        android:weightSum="10">

        <ImageView
            android:id="@+id/meetem"
            android:title="@string/meetem"
            android:background="@drawable/meetem"
            android:layout_width="600px"
            android:layout_height="250px"/>

        <ImageView
            android:background="@drawable/username"
            android:id="@+id/username"
            android:title="@string/username"
            android:text="@string/username"
            android:layout_height="50px"
            android:layout_weight="1"
            android:layout_width="400px"
            android:layout_gravity="left"/>



        <EditText android:id="@+id/Input_Username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:singleLine="true"/>


        <ImageView
            android:background="@drawable/password"
            android:id="@+id/password"
            android:title="@string/password"
            android:layout_height="50px"
            android:layout_weight="1"
            android:layout_width="400px"
            android:layout_gravity="left"/>


        <EditText android:id="@+id/Input_Password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="15dip"
            android:singleLine="true"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:id="@+id/signin"
            android:onClick="signinbtnclicked"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Create Account"
            android:id="@+id/createaccount"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>
